--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,62 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+
+ul {
+  list-style: none;
+  width: 350px;
+  padding-left: 0;
+}
+
+li {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+
+li>img {
+  height: 50px;
+}
+
+div>img {
+  width: 300px;
+  display: block;
+  margin: auto;
+  padding: 15px;
+}
+
+
+.country-body {
+  display: block;
+  margin: auto;
+  padding: 10px;
+  margin-left: 30px;
+}
+
+.country-body>h3 {
+  text-decoration: underline;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+
+header h1 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #5454f6;
+  text-shadow: 0px 0px 5px #c0c0c0, 0px 0px 10px #c0c0c0, 0px 0px 10px #c0c0c0,
+    0px 0px 20px #c0c0c0;
+}
+.country-list {
+  display: flex;
+  width:  300px;
+}
+.country_img {
+  width: 200px;
+}
